--- a/Code/PerceptronFrontEnd/src/app/summary-results/summary-results.component.html
+++ b/Code/PerceptronFrontEnd/src/app/summary-results/summary-results.component.html
@@ -20,10 +20,10 @@
       </ng-container>
 
       <!-- Name Column -->
-      <ng-container matColumnDef="name">
+      <!-- <ng-container matColumnDef="name">
         <mat-header-cell *matHeaderCellDef mat-sort-header style="font-weight: bolder; font-size:15px;"> Protein Name </mat-header-cell>
         <mat-cell style=" font-size:15px;" *matCellDef="let row"> {{row.name}} </mat-cell>
-      </ng-container>
+      </ng-container> -->
 
       <!-- ID Column -->
       <ng-container matColumnDef="id">
