--- a/Code/PerceptronFrontEnd/src/app/results-visualization/results-visualization.component.html
+++ b/Code/PerceptronFrontEnd/src/app/results-visualization/results-visualization.component.html
@@ -81,34 +81,17 @@
   </mat-card>
 
   <div style="height:10px;font-size:1px;">&nbsp;</div>
+
   <mat-card>
-      <h6 style="text-align:center; font-weight:bold">Legends</h6>
-      <p style="color:red;"><b><i>P</i></b>     Phosphorylation</p>
-      <p style="color:red;"><b><i>DiM</i></b>     DiMethylation</p>
-      
-      <p style="color:red;"><b><i>M</i></b>     Methylation</p>
-      <p style="color:red;"><b><i>A</i></b>     Acetylation</p>
-      <p style="color:red;"><b><i>H</i></b>      Hydroxylation</p>
-      <p style="color:red;"><b><i>DiH</i></b>     DiHydroxylation</p>
-      <p style="color:red;"><b><i>OLG</i></b>     O-Linked-Glycosylation</p>
-      <p style="color:red;"><b><i>SO</i></b>      Sulfoxide</p>
-
-      <p style="color:red;"><b><i>G</i></b>     Glutathionylation</p>
-      <p style="color:red;"><b><i>Mk</i></b>      Methylation_K</p>
-      <p style="color:red;"><b><i>SN</i></b>      S-Nitrolysation</p>
-      <p style="color:red;"><b><i>Pal</i></b>     Palmitoylation</p>
-      <p style="color:red;"><b><i>F</i></b>     Formylation</p>
-      <p style="color:red;"><b><i>N</i></b>     Nitration</p>
-     
-      <p style="color:red;"><b><i>NLG</i></b>     N-Linked-Glycosylation</p>
-      <p style="color:red;"><b><i>SONE</i></b>      Sulfone</p>
-      <p style="color:red;"><b><i>Py</i></b>      Pyruvate</p>
-
-      <p style="color:red;"><b><i>PAA</i></b>     Pyrrolidone-Aarboxylic-Acid</p>
-      <p style="color:red;"><b><i>GCA</i> </b>      Gamma-Carboxyglutamic-Acid</p>
-
-      
-      <p style="color:red;"><b>*</b>      Blind PTM Mass</p>
+      <div>
+          <h6 style="text-align:center; font-weight:bold">Legends</h6>
+          <p><span style="color: red">&piv;</span> <span style="color: black">Phosphorylation</span> <span style="padding-left: 20px; color: red"> &omega;</span> <span style="color: black">DiMehylation</span> <span style="padding-left: 20px; color: red;"> &Psi;</span> <span style="color: black">Mehylation</span> <span style="padding-left: 20px; color: red;"> &alpha;</span> <span style="color: black">Acetylation</span> </p>
+          <p><span style="color: red">&theta;</span> <span style="color: black">Hydroxylation</span> <span style="padding-left: 20px; color: red"> &otimes;</span> <span style="color: black">DiHydroxylation</span> <span style="padding-left: 20px; color: red;"> &oplus;</span> <span style="color: black">O-Linked-Glycosylation</span> <span style="padding-left: 20px; color: red;"> &Oslash;</span> <span style="color: black">Sulfoxide</span> </p>
+          <p><span style="color: red">&nabla;</span> <span style="color: black">Glutathionylation</span> <span style="padding-left: 20px; color: red"> &Delta;</span> <span style="color: black">Mehylation<sub>K</sub></span> <span style="padding-left: 20px; color: red;"> &clubs;</span> <span style="color: black">S-Nitrosylation</span> <span style="padding-left: 20px; color: red;"> &hearts;</span> <span style="color: black">Palmitoylation</span> </p>
+          <p><span style="color: red">&spades;</span> <span style="color: black">Formylation</span> <span style="padding-left: 20px; color: red"> &loz;</span> <span style="color: black">Nitration</span> <span style="padding-left: 20px; color: red;"> &real;</span> <span style="color: black">N-Linked-Glycosylation</span> <span style="padding-left: 20px; color: red;"> &zeta;</span> <span style="color: black">Sulfone</span> </p>
+          <p><span style="color: red">&perp;</span> <span style="color: black">Pyruvate</span> <span style="padding-left: 20px; color: red"> &or;</span> <span style="color: black">Pyrrolidone-Aarboxylic-Acid</span> <span style="padding-left: 20px; color: red;"> &omega;</span> <span style="color: black">Gamma-Carboxyglutamic-Acid</span></p>
+              
+          <p><span style="color: red">*</span> <span style="color: black">Blind PTM Mass</span>
       <p style="color:blue;"><b>*</b>     Peptide Sequence Tag</p>
       <p style="color:rgb(220, 105, 224);"><b>*</b>     Amino Acids - Possible Blind PTM Sites</p>
 
@@ -122,9 +105,9 @@
       <p style="color:green;"><b>Theoretical Mass</b></p>
 
       <p style="color:black;"><b>Mass Difference between Experimental and Theoretical Peaks</b></p>
+        </div>
+  </mat-card>
 
-
-    </mat-card>
     <div style="height:10px;font-size:1px;">&nbsp;</div>
 </div>
 
