--- a/Code/PerceptronFrontEnd/src/app/admin-panel/admin-panel.component.html
+++ b/Code/PerceptronFrontEnd/src/app/admin-panel/admin-panel.component.html
@@ -1,60 +1,165 @@
-<form #f="ngForm" (ngSubmit)="onSubmit(f.value);" class="ui form">
-<div style="width:90%; min-width: 600px; margin:0 auto;">
+<form #formSubmit="ngForm" (ngSubmit)="onSubmit(formSubmit.value);" class="ui form">
+  <div style="width:90%; min-width: 600px; margin:0 auto;">
     <mat-card>
-      <h4 style="text-align:center; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Admin Panel</h4>
+      <h4 style="text-align:center; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Admin
+        Panel</h4>
     </mat-card>
 
-    <br>
+    <div style="height:10px;font-size:1px;">&nbsp;</div>
+
+    <div>
+      <p style="font-size:12px; font-style: italic; color:red;">
+        Required Fields *
+      </p>
+
+    </div>
 
     <mat-card>
-        <h6 style="text-align:center; font-weight:bold">Change Database</h6>
-        
-        <mat-grid-tile colspan="2" rowspan="1" style="padding:0px;">
-            <span matTooltip="Browse and upload new database (FASTA format) " matTooltipPosition="left" style="padding:0px; padding-left:15px; width:100%;">
-              <label class="required" style='display:inline;  font-weight:500;'>Upload FASTA File </label>
-              <br/>
-              <label style='display:inline;  font-weight:500; '>Select File(s): </label>
-                <style>
-                  .required:after {
-                    content:"*";
-                    margin: auto;
-                    padding: 5px;
-                    color: rgb(43, 39, 39);
-                  }
-                </style>
+      <mat-card-header>
+        <h3 style="padding-left:0px; font-weight:bold; font-family: roboto, arial, sans-serif;">Update Database</h3>
+      </mat-card-header>
+
+      <mat-card-content>
+        <mat-grid-list cols="8" rowHeight="130px">
+
+          <mat-grid-tile colspan="2" rowspan="1" style="padding:0px;">
+            <mat-form-field matTooltip="Select protein database from which you want to search protein(s)"
+              matTooltipPosition="before" style="width: 100%; padding-left:15px;">
+              <mat-select placeholder="Select Database" [(ngModel)]="NameOfDatabase" #ProteinDatabase='ngModel' required
+                name="ProteinDatabase">
+                <mat-option *ngFor="let SelectedDatabase of ListOfDatabases" [value]="SelectedDatabase.value">
+                  {{SelectedDatabase.viewValue}}
+                </mat-option>
+              </mat-select>
+              <mat-error style="font-style: italic;"
+                *ngIf="ProteinDatabase?.invalid && (ProteinDatabase.dirty || ProteinDatabase.touched)">
+                <div *ngIf="ProteinDatabase.errors.required">
+                  Please select protein database.
+                </div>
+              </mat-error>
+            </mat-form-field>
+          </mat-grid-tile>
+
+
+          <mat-grid-tile colspan="3" rowspan="1" style="padding:0px;">
+            <span matTooltip="Browse and upload FASTA file (‘fasta' file for updating database) "
+              matTooltipPosition="left" style="padding:0px; padding-left:15px; width:100%;">
+              <!-- <label class="required" style='display:inline;  font-weight:500;'>Upload FASTA File</label> -->
+              <br />
+              <label style='display:inline;  font-weight:500; '>Select File * : </label>
+              <style>
+                .required:after {
+                  content: "*";
+                  margin: auto;
+                  padding: 5px;
+                  color: rgb(43, 39, 39);
+                }
+              </style>
               <label style="display:inline;">&nbsp;</label>
               <div style='display:inline;' class="button-row">
-                <button mat-button class='buttonclass' type='button' style='display:inline; background-color:#212121 ' mat-mini-fab (click)="imgFileInput.click()">
+                <button mat-button class='buttonclass' type='button' style='display:inline; background-color:#212121 '
+                  mat-mini-fab (click)="imgFileInput.click()">
                   <mat-icon class='iconclass'>insert_drive_file</mat-icon>
                 </button>
-                <style>.buttonclass {width: 35px; height: 35px;}
-                .iconclass {font-size: 22px; margin-top: -4px;}
+                <style>
+                  .buttonclass {
+                    width: 35px;
+                    height: 35px;
+                  }
+
+                  .iconclass {
+                    font-size: 22px;
+                    margin-top: -4px;
+                  }
                 </style>
-                <br/>
+                <br />
                 <label style="display:inline;">&nbsp;</label>
-                <a style="color: rgb(81, 81, 252);" style='display:inline;'><i *ngIf='email.files.length>1; else onefile'>{{email.files.length}} Files Selected</i></a>
+
                 <ng-template #onefile>
-                  <i *ngIf='email.files.length==1'>{{email.files[0].name}}</i>
+                  <i *ngIf='FileInfo.files.length==1'>{{FileInfo.files[0].name}}</i>
                 </ng-template>
-                <input #email type="file" #imgFileInput (ngModel)="email" #FileName="ngModel" required name="FileName" [(ngModel)]="filenameModel" id="FileName" (change)="upload(Uploaded_File)"
-                  accept=".txt, .mgf, .mzXML" multiple ngModel/>
-                <mat-error style="display: inline; font-style: italic;" *ngIf ="email.files.length==0">
-                  Please select atleast one data file.
+                <input #FileInfo type="file" #imgFileInput (ngModel)="FileInfo" #FileName="ngModel" required
+                  name="FileName" [(ngModel)]="filenameModel" id="FileName" (change)="upload(Uploaded_File)"
+                  accept=".fasta" multiple ngModel />
+                <mat-error style="display: inline; font-style: italic;" *ngIf="FileInfo.files.length==0">
+                  Please select FASTA file.
+                </mat-error>
+                <mat-error style="display: inline; font-style: italic;" *ngIf="FileInfo.files.length>1">
+                  Please select just one FASTA file.
                 </mat-error>
               </div>
             </span>
           </mat-grid-tile>
-        
 
-      </mat-card>
-      <mat-grid-tile colspan="1" rowspan="1">
-          <label style="padding-left:15px;"></label>
-          <button mat-raised-button matTooltip="Click to submit FASTA file " class="button-sumbit"  type="submit" style="background-color: #201a93; color:aliceblue"
-            class="ui button">Submit</button>
+          <mat-grid-tile colspan="2" rowspan="1">
+            <mat-progress-bar mode="indeterminate" *ngIf="this.IsWaitSubmit"></mat-progress-bar>
+          </mat-grid-tile>
+
+          <mat-grid-tile colspan="1" rowspan="2">
+            <label style="padding-left:15px;"></label>
+            <button mat-raised-button matTooltip="Click to submit FASTA file" class="button-sumbit"
+              [disabled]="!formSubmit.valid || this.IsWaitDownload == 1" matTooltipPosition="after" type="submit"
+              style="background-color: #201a93; color:aliceblue" class="ui button">Submit</button>
+          </mat-grid-tile>
+        </mat-grid-list>
+
+        <mat-grid-tile colspan="1" rowspan="2">
+          <button mat-raised-button matTooltip="Click to clear all values" matTooltipPosition="before" type="reset"
+            style="background-color: #212121; color:aliceblue" class="ui button">Reset</button>
+          <label style="padding-right:15px;"></label>
         </mat-grid-tile>
 
-    </div>
-  </form>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</form>
 
 
-  <!-- [disabled]="!f.valid" matTooltipPosition="after" -->
+<div style="height:10px;font-size:1px;">&nbsp;</div>
+
+
+<form #formDownload="ngForm" (ngDownload)="onDownload(formDownload.value);" class="ui form">
+  <div style="width:90%; min-width: 600px; margin:0 auto;">
+    <mat-card>
+      <mat-card-header>
+        <h3 style="padding-left:0px; font-weight:bold; font-family: roboto, arial, sans-serif;">Download Database</h3>
+      </mat-card-header>
+
+      <mat-card-content>
+        <mat-grid-list cols="8" rowHeight="100px">
+
+          <mat-grid-tile colspan="2" rowspan="1" style="padding:0px;">
+            <mat-form-field matTooltip="Select protein database from which you want to search protein(s)"
+              matTooltipPosition="before" style="width: 100%; padding-left:15px;">
+              <mat-select placeholder="Select Database" [(ngModel)]="NameOfDatabase" #ProteinDatabase='ngModel' required
+                name="ProteinDatabase">
+                <mat-option *ngFor="let SelectedDatabase of ListOfDatabases" [value]="SelectedDatabase.value">
+                  {{SelectedDatabase.viewValue}}
+                </mat-option>
+              </mat-select>
+              <mat-error style="font-style: italic;"
+                *ngIf="ProteinDatabase?.invalid && (ProteinDatabase.dirty || ProteinDatabase.touched)">
+                <div *ngIf="ProteinDatabase.errors.required">
+                  Please select protein database to download.
+                </div>
+              </mat-error>
+            </mat-form-field>
+          </mat-grid-tile>
+
+          <mat-grid-tile colspan="1" rowspan="1">
+            <label style="padding-left:15px;"></label>
+            <button mat-raised-button matTooltip="Click to download FASTA file" class="button-sumbit"
+              [disabled]="!formDownload.valid  || this.IsWaitSubmit == 1" matTooltipPosition="after" type="submit"
+              style="background-color: #201a93; color:aliceblue" class="ui button">Download</button>
+          </mat-grid-tile>
+
+
+          <mat-grid-tile colspan="2" rowspan="1">
+            <mat-progress-bar mode="indeterminate" *ngIf="this.IsWaitDownload"></mat-progress-bar>
+          </mat-grid-tile>
+
+        </mat-grid-list>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</form>
