--- a/Code/PerceptronFrontEnd/src/app/results-visualization/results-visualization.component.html
+++ b/Code/PerceptronFrontEnd/src/app/results-visualization/results-visualization.component.html
@@ -23,7 +23,7 @@
         </div>        
       <!-- </div> -->
       <div style="height:400px;font-size:1px;">&nbsp;</div>
-      <a href ="http://creativecommons.org/licenses/by-nc/3.0/deed.en_US"> Courtesy By: CanvasJS.com </a>
+      <div style='text-align:right'><a style='right:0pt; font-size:10px' href ="https://creativecommons.org/licenses/by-nc/3.0/legalcode"> Courtesy By: CanvasJS.com </a></div>
     </mat-card>
   
     <div style="height:10px;font-size:1px;">&nbsp;</div>
@@ -36,7 +36,7 @@
   
         <!-- Serial Column -->
         <ng-container matColumnDef="rank">
-          <mat-header-cell *matHeaderCellDef mat-sort-header style="font-weight: bolder; font-size:15px;"> Serial No.
+          <mat-header-cell *matHeaderCellDef mat-sort-header style="font-weight: bolder; font-size:15px;"> Protein Rank
           </mat-header-cell>
           <mat-cell style=" font-size:15px;" *matCellDef="let row"> {{row.rank}} </mat-cell>
         </ng-container>
