--- a/Code/PerceptronFrontEnd/src/app/results-visualization/results-visualization.component.html
+++ b/Code/PerceptronFrontEnd/src/app/results-visualization/results-visualization.component.html
@@ -36,7 +36,7 @@
   
         <!-- Serial Column -->
         <ng-container matColumnDef="rank">
-          <mat-header-cell *matHeaderCellDef mat-sort-header style="font-weight: bolder; font-size:15px;"> Protein Rank
+          <mat-header-cell *matHeaderCellDef mat-sort-header style="font-weight: bolder; font-size:15px;"> Sr. #
           </mat-header-cell>
           <mat-cell style=" font-size:15px;" *matCellDef="let row"> {{row.rank}} </mat-cell>
         </ng-container>
